--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обо мне - Артём</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -30,7 +33,7 @@
 
         <section id="education">
             <h2>Образование</h2>
-            <p>Московский Политехнический университет 1 курс </p> 
+            <p>Московский Политехнический университет 1 курс</p>
             <p>Специальность - <em>Информационная безопасность Автоматизированных систем</em>.</p>
             <p>Это мои увлечения</p>
             <ol>
