--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>Артём</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="gallery.html">Галерея</a></li>
                 <li><a href="#about">Обо мне</a></li>
                 <li><a href="#education">Образование</a></li>
                 <li><a href="#contact">Связаться со мной</a></li>
@@ -28,7 +30,7 @@
             <blockquote>
                 <p>Туда не сюда, а сюда не туда. Ауф...</p>
             </blockquote>
-            <img src="https://via.placeholder.com/150" alt="Моё фото">
+            <img src="img/image1.jpg" alt="Моё фото">
         </section>
 
         <section id="education">
