--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Галерея - Артём</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>Галерея</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="gallery.html">Галерея</a></li>
+            </ul>
+        </nav>
+        <hr>
+    </header>
 
+    <main>
+        <section class="gallery">
+            <h2>Моя галерея</h2>
+            <div class="gallery-container">
+                <figure>
+                    <img src="img/P1210104.jpg" alt="Изображение 1" width="300" height="200">
+                    <figcaption>JPEG изображение</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/IMG_20241010_212324.png" alt="Изображение 2" width="300" height="200">
+                    <figcaption>PNG изображение</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/P1220263.svg" alt="Изображение 3" width="300" height="200">
+                    <figcaption>SVG изображение</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/P1220257.webp" alt="Изображение 4" width="300" height="200">
+                    <figcaption>WebP изображение</figcaption>
+                </figure>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <hr>
+        <p>&copy; 2025 Тёма. Все права защищены или нет.</p>
+        <p>Связаться со мной: <a href="mailto:temchiknovikov226@gmail.com">temchiknovikov226@gmail.com</a></p>
+    </footer>
+</body>
+</html>
