--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <blockquote>
                 <p>Туда не сюда, а сюда не туда. Ауф...</p>
             </blockquote>
-            <img src="img/DSC_3263.jpg" alt="Моё фото">
+            <img src="img/DSC_3263.jpg" alt="Моё фото" width="300" height="300">
         </section>
 
         <section id="education">
